updating build command

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "dev": "rescripts start",
-    "build": "npm run prettier && rescripts build && npm run surge",
+    "build": "npm run prettier && rescripts build",
     "postbuild": "react-snap && cp build/index.html build/404.html && cp build/index.html build/200.html",
     "eject": "rescripts eject",
     "prettier": "prettier --write .",
