--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primereact": "^9.0.0-beta.1",
     "query-string": "^8.1.0",
     "react": "16.8.1",
+    "react-confirm-alert": "^2.8.0",
     "react-dom": "16.8.1",
     "react-hooks-fetch": "^0.5.1",
     "react-intersection-observer": "^8.0.5",
