Update filters design

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "primereact": "^9.0.0-beta.1",
     "query-string": "^8.1.0",
     "react": "16.8.1",
+    "react-click-away-listener": "^2.2.2",
     "react-dom": "16.8.1",
     "react-hooks-fetch": "^0.5.1",
     "react-intersection-observer": "^8.0.5",
     "react-lazy-progressive-image": "^1.4.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "3.0.1",
     "styled-components": "^4.1.3",
     "stylis": "^3.5.4",
