--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hooks-fetch": "^0.5.1",
     "react-intersection-observer": "^8.0.5",
     "react-lazy-progressive-image": "^1.4.0",
+    "react-player": "^2.11.2",
     "react-scripts": "3.0.1",
     "styled-components": "^4.1.3",
     "stylis": "^3.5.4",
