--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "query-string": "^8.1.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
+    "react-ga4": "^2.1.0",
     "react-hooks-fetch": "^0.5.1",
     "react-intersection-observer": "^8.0.5",
     "react-lazy-progressive-image": "^1.4.0",
