--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": false,
   "dependencies": {
     "@reach/router": "^1.2.1",
@@ -53,6 +53,12 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@rescripts/cli": "^0.0.10",
     "@rescripts/rescript-env": "^0.0.5",
-    "babel-plugin-preval": "^3.0.1"
+    "babel-plugin-preval": "^3.0.1",
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
