feat: add clear cinema id icon

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.4.2",
   "private": false,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reach/router": "^1.2.1",
     "context-storage": "^0.0.0",
     "griding": "^0.1.2",
