refactor: rename tv kind to tvshow and update wording

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "What's on?",
-  "name": "Get quickly highest rated movies/tvshows or explore",
+  "name": "Quickly get the highest-rated movies/TV shows or explore.",
   "icons": [
     {
       "src": "favicon.ico",
