--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "2.4.11",
+  "version": "2.5.0",
   "private": false,
   "dependencies": {
     "@reach/router": "^1.3.4",
@@ -9,6 +9,7 @@
     "griding": "^0.1.3",
     "minireset.css": "^0.0.4",
     "prettier": "^3.2.5",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.4",
     "query-string": "^8.2.0",
