--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "2.6.37",
+  "version": "2.6.38",
   "private": false,
+  "engines": {
+    "node": "16.13.0"
+  },
   "dependencies": {
     "@reach/router": "^1.3.4",
     "context-storage": "^0.0.0",
