--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "2.6.5",
+  "version": "2.7.0",
   "private": false,
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "chart.js": "^4.4.4",
     "context-storage": "^0.0.0",
     "griding": "^0.1.3",
     "minireset.css": "^0.0.4",
