--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "2.74.0",
+  "version": "2.80.0",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@reach/router": "^1.3.4",
     "chart.js": "^4.4.4",
     "context-storage": "^0.0.0",
