--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "2.80.2",
+  "version": "2.81.0",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@reach/router": "^1.3.4",
     "chart.js": "^4.4.4",
     "context-storage": "^0.0.0",
     "griding": "^0.1.3",
+    "jshashes": "^1.0.8",
     "minireset.css": "^0.0.4",
     "prettier": "^3.3.3",
     "primeflex": "^3.3.1",
@@ -27,13 +28,10 @@
   },
   "scripts": {
     "build": "npm run prettier && rescripts build",
-    "dev": "rescripts start",
-    "eject": "rescripts eject",
+    "start": "npm run prettier && rescripts start",
     "postbuild": "cp build/index.html build/404.html && cp build/index.html build/200.html",
     "prebuild": "node ./build-version",
     "prettier": "prettier --write .",
-    "surge": "npm run build && surge build whatson-dev.surge.sh",
-    "teardown": "surge teardown whatson-dev.surge.sh",
     "update": "rm -rf node_modules package-lock.json && bash update-dependencies.sh && npm i --legacy-peer-deps"
   },
   "rescripts": [
