--- a/package.json
+++ b/package.json
@@ -1,42 +1,39 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "2.95.0",
+  "version": "3.0.0",
   "dependencies": {
     "@auth0/auth0-react": "^2.6.0",
     "@reach/router": "^1.3.4",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
     "context-storage": "^0.0.0",
     "griding": "^0.1.3",
     "jshashes": "^1.0.8",
-    "minireset.css": "^0.0.4",
+    "minireset.css": "^0.0.7",
     "prettier": "^3.6.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^9.6.5",
-    "query-string": "^8.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "query-string": "^9.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hooks-fetch": "^0.5.1",
-    "react-intersection-observer": "^8.34.0",
+    "react-intersection-observer": "^9.16.0",
     "react-lazy-progressive-image": "^1.5.5",
-    "react-player": "^2.16.1",
+    "react-player": "^3.3.3",
     "react-scripts": "^5.0.1",
-    "styled-components": "^4.4.1",
-    "stylis": "^3.5.4",
+    "styled-components": "^5.3.11",
+    "stylis": "^4.3.6",
     "typeface-roboto": "^1.1.13"
   },
   "scripts": {
-    "build": "npm run prettier && rescripts build",
-    "start": "npm run prettier && rescripts start",
+    "build": "npm run prettier && react-scripts build",
+    "start": "npm run prettier && react-scripts start",
     "postbuild": "cp build/index.html build/404.html && cp build/index.html build/200.html",
     "prebuild": "node ./build-version",
     "prettier": "prettier --write .",
     "update": "rm -rf node_modules package-lock.json && bash update-dependencies.sh && npm i --legacy-peer-deps"
   },
-  "rescripts": [
-    "env"
-  ],
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -50,8 +47,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@rescripts/cli": "^0.0.10",
-    "@rescripts/rescript-env": "^0.0.5",
     "babel-plugin-preval": "^3.0.1",
     "cz-conventional-changelog": "^3.3.0"
   },
