--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatson",
   "description": "What's on?",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "dependencies": {
     "@auth0/auth0-react": "^2.6.0",
     "@reach/router": "^1.3.4",
@@ -29,6 +29,7 @@
   "scripts": {
     "build": "npm run prettier && react-scripts build",
     "start": "npm run prettier && react-scripts start",
+    "test": "react-scripts test",
     "postbuild": "cp build/index.html build/404.html && cp build/index.html build/200.html",
     "prebuild": "node ./build-version",
     "prettier": "prettier --write .",
@@ -47,6 +48,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "babel-plugin-preval": "^3.0.1",
     "cz-conventional-changelog": "^3.3.0"
   },
